update trying fix light dark mode

--- a/css/footer.css
+++ b/css/footer.css
@@ -4,16 +4,36 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  min-height: 8rem;
+  gap: var(--space-m);
+  justify-content: space-between;
+  min-height: 10rem;
   margin-top: auto;
+
+  padding-bottom: 2rem;
 }
 
 .footer-content {
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  /* align-items: center; */
+  gap: var(--space-m);
+}
+
+.footer-nav-list {
+  list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--space-m);
+  justify-content: center;
+  gap: 1rem;
+}
+
+
+
+.footer-bottom{
+  text-align: center;
 }
 
 @media (min-width: 600px) {
@@ -22,4 +42,9 @@ footer {
     justify-content: space-around;
     width: 100%;
   }
+
+  .footer-nav-list{
+    flex-direction: row;
+  }
+  
 }
